--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,34 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
-body{
-    background-color: darkslategrey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  background-color: darkslategrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-label { font-family: 'Courier New', Courier, monospace;
-    color: darksalmon;
-    }
-
-select{
-    background-color: darksalmon;
-    border-bottom-left-radius: 20%;
-    border-top-right-radius: 20%;
-    border-bottom-left-radius: 20%;
-   border-bottom: 20%;
-
+label {
+  font-family: "Courier New", Courier, monospace;
+  color: darksalmon;
 }
-input{
-    background-color: darksalmon;
+
+select {
+  background-color: darksalmon;
+  border-bottom-left-radius: 20%;
+  border-top-right-radius: 20%;
+  border-bottom-left-radius: 20%;
+  border-bottom: 20%;
+}
+input {
+  background-color: darksalmon;
 }
 
 img {
-    height: 300px;
-    width: 300px;
-    padding:30px;
+  width: 50%;
+  max-width: 50%;
+  height: 50%;
+  padding: 30px;
+  box-shadow: 10px 20px rgba(0, 0, 0, 0.5);
 }
